<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="WELCOME!"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcomeTextView"
        android:textSize="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        xmlns:android="http://schemas.android.com/apk/res/android" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login below or select Register"
        android:id="@+id/introEditText"
        android:layout_below="@+id/welcomeTextView"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:textSize="15dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emailEditText"
        android:hint="Enter Email"
        android:focusable="true"
        android:textColorHighlight="#fb00ff"
        android:textColorHint="#2945a3"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/introEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordEditText"
        android:layout_below="@+id/emailEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/emailEditText"
        android:layout_alignEnd="@+id/emailEditText"
        android:textColorHint="#2945a3"
        android:hint="Password" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="login"
        android:id="@+id/loginButton"
        android:layout_below="@+id/passwordEditText"
        android:layout_centerHorizontal="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:id="@+id/registerButton"
        android:layout_below="@+id/loginButton"
        android:layout_alignRight="@+id/welcomeTextView"
        android:layout_alignEnd="@+id/welcomeTextView" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:text="Forgot Password?"
        android:id="@+id/forgotButton"
        android:background="@android:color/transparent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
