<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        tools:ignore="ExtraText">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/icon"
                android:scaleType="center"
                android:paddingBottom="10dp" />
            <TextView
                android:id="@+id/image_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image"
                android:layout_centerHorizontal="true"
                android:text="1/2 images:"
                android:paddingLeft="10dp"
                android:textSize="20dp"
                android:paddingBottom="4dp" />
        </RelativeLayout>
        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="0.1"
            android:isIndicator="true"
            android:layout_marginLeft="10dp"
            android:rating="2.0"
            android:progressTint="#FFCC00"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="Host"
                android:id="@+id/viewButton" />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Address:"
                android:paddingLeft="10dp"
                android:textSize="20dp"
                android:paddingBottom="4dp" />
            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:paddingLeft="10dp"
                android:textSize="20dp"
                android:paddingBottom="4dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Price:"
                android:paddingLeft="10dp"
                android:textSize="20dp"
                android:paddingBottom="4dp" />
            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:paddingLeft="10dp"
                android:textSize="20dp"
                android:paddingBottom="4dp" />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Filters:"
                android:paddingLeft="10dp"
                android:textSize="20dp"
                android:paddingBottom="4dp" />
            <TextView
                android:id="@+id/filters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:paddingLeft="10dp"
                android:textSize="20dp"
                android:paddingBottom="4dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Description:"
                android:paddingLeft="10dp"
                android:textSize="20dp"
                android:paddingBottom="4dp" />
            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:paddingLeft="10dp"
                android:textSize="20dp"
                android:paddingBottom="4dp" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Time Frame:"
                android:paddingLeft="10dp"
                android:textSize="20dp"
                android:paddingBottom="4dp" />
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/Time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cancellation policy:"
                android:paddingLeft="10dp"
                android:textSize="20dp"
                android:paddingBottom="4dp" />
            <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:paddingLeft="10dp"
                android:textSize="20dp"
                android:paddingBottom="4dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reviews:"
            android:paddingLeft="10dp"
            android:textSize="20dp"
            android:paddingBottom="4dp" />
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </LinearLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:id="@+id/cancelButton"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Edit"
            android:id="@+id/editButton"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


    </LinearLayout>

</ScrollView>
